Use nix flake in CI.

--- a/.woodpecker/images/tests/Dockerfile
+++ b/.woodpecker/images/tests/Dockerfile
@@ -29,22 +29,56 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	libxml2-dev \
 	python3 \
 	libpq-dev \
-	sudo
+	sudo \
+	&& rm -rf /var/lib/apt/lists/*
 
 ENV RUST_BACKTRACE=1 \
+	DEBIAN_FRONTEND=noninteractive \
 	RUSTUP_TOOLCHAIN_VERSION=1.82 \
-	BITCOIN_VERSION=29.0 \
-	CLN_VERSION=25.02.2 \
 	MACOS_SDK_VERSION=15.4 \
-	ELECTRS_HASH=a9a39b1616591fb08514fba4df1c1ca11b24a500 \
+	MACOS_DARWIN_VERSION=24.4 \
 	PATH=/root/.cargo/bin:/usr/lib/postgresql/16/bin:${PATH} \
-	ZIG_VERSION=0.13.0
+	ZIG_VERSION=0.13.0 \
+	NIX_PATH=/nix/var/nix/profiles/per-user/root/channels \
+	NIX_PROFILES="/nix/var/nix/profiles/default /root/.nix-profile" \
+	POSTGRES_USER=postgres \
+	POSTGRES_PASSWORD=postgres
 
-ENV POSTGRES_USER=postgres
-ENV POSTGRES_PASSWORD=postgres
+RUN mkdir -p /nix && \
+	groupadd -r nixbld -g 30000 && \
+	for i in $(seq 1 32); do \
+		useradd -r -u $((30000 + i)) -g nixbld -G nixbld -M -N nixbld$i; \
+	done && \
+	chown root:nixbld /nix
+
+ENV PATH="/root/.nix-profile/bin:/root/.nix-profile/sbin:/root/.nix-profile/lib:/nix/var/nix/profiles/default/bin:$PATH"
+RUN bash -c '\
+  curl -L https://nixos.org/nix/install | bash -s -- --daemon && \
+  . /etc/profile.d/nix.sh && \
+  nix-env --version \
+'
+
+RUN echo "clone bark" && \
+	cd /root && \
+	git clone -b nix-in-ci https://codeberg.org/ark-bitcoin/bark.git
+
+RUN echo "build nix devShell" && \
+	. /etc/profile.d/nix.sh && \
+	nix --extra-experimental-features 'nix-command flakes' develop /root/bark#default --command bash -c "\
+		echo Flake devShell ready"
 
 RUN service postgresql start && \
-	sudo -u postgres psql -c "ALTER USER $POSTGRES_USER WITH PASSWORD '$POSTGRES_PASSWORD';"
+	sudo -u postgres psql -c "ALTER USER ${POSTGRES_USER} WITH PASSWORD '${POSTGRES_PASSWORD}';" && \
+	service postgresql stop
+
+RUN echo "build bark" && \
+	. /etc/profile.d/nix.sh && \
+	cd /root/bark && \
+	nix --extra-experimental-features 'nix-command flakes' develop /root/bark#default --command bash -c "\
+		cargo build --workspace && \
+		cargo llvm-cov --workspace --exclude ark-testing --html && \
+		cargo install --locked --path bark && \
+		cargo install --locked --path aspd"
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain none
 RUN echo "Installing Rust toolchains version ${RUSTUP_TOOLCHAIN_VERSION}..." && \
@@ -55,27 +89,6 @@ RUN echo "Installing Rust toolchains version ${RUSTUP_TOOLCHAIN_VERSION}..." && 
 	rustup target add armv7-unknown-linux-gnueabihf && \
 	rustup target add x86_64-apple-darwin && \
 	rustup target add aarch64-apple-darwin
-RUN echo "Installing bitcoin core in /bitcoin/${BITCOIN_VERSION}/bin/" && \
-	mkdir /bitcoin && \
-	cd /bitcoin && \
-	wget https://bitcoincore.org/bin/bitcoin-core-${BITCOIN_VERSION}/bitcoin-${BITCOIN_VERSION}-x86_64-linux-gnu.tar.gz && \
-	tar xvzf bitcoin-${BITCOIN_VERSION}-x86_64-linux-gnu.tar.gz && \
-	mv bitcoin-${BITCOIN_VERSION} ${BITCOIN_VERSION} && \
-	cp /bitcoin/${BITCOIN_VERSION}/bin/bitcoin-cli /usr/bin/bitcoin-cli
-RUN echo "Installing c-lightning in /lightning/${CLN_VERSION}/bin/" && \
-	mkdir /lightning && \
-	cd /lightning && \
-	wget https://github.com/ElementsProject/lightning/releases/download/v${CLN_VERSION}/clightning-v${CLN_VERSION}-Ubuntu-24.04-amd64.tar.xz && \
-	mkdir ${CLN_VERSION} && \
-	tar -xvf clightning-v${CLN_VERSION}-Ubuntu-24.04-amd64.tar.xz -C ./${CLN_VERSION} --strip-components=2
-RUN echo "Installing c-lightning hold invoice plugin in /hold/" && \
-	mkdir /plugins && \
-	git clone https://github.com/BoltzExchange/hold.git && \
-	cd hold && \
-	git checkout v0.2.2 && \
-	cargo build && \
-	cp /hold/target/debug/hold /plugins && \
-	chown root:root /plugins/hold
 RUN cd /root/ && \
 	git clone https://github.com/tpoechtrager/osxcross.git && \
 	cd /root/osxcross/tarballs/ && \
@@ -89,17 +102,9 @@ RUN echo "Installing sccache"
 RUN cargo install --locked sccache
 RUN echo "Installing just"
 RUN cargo install --locked just
-RUN echo "Installing cargo-llvm-cov"
-RUN cargo install --locked cargo-llvm-cov
 RUN mkdir -p /root/.cargo && \
-	echo '[build]\nrustc-wrapper = "sccache"\n[target.x86_64-pc-windows-gnu]\nlinker = "x86_64-w64-mingw32-gcc"\n[target.i686-pc-windows-gnu]\nlinker = "i686-w64-mingw32-gcc"\n[target.x86_64-apple-darwin]\nlinker = "/usr/local/osxcross/bin/x86_64-apple-darwin24.4-clang"\nar = "/usr/local/osxcross/bin/x86_64-apple-darwin24.4-ar"\n[target.aarch64-apple-darwin]\nlinker = "/usr/local/osxcross/bin/aarch64-apple-darwin24.4-clang"\nar = "/usr/local/osxcross/bin/aarch64-apple-darwin24.4-ar"\n' > /root/.cargo/config.toml
+	echo '[build]\nrustc-wrapper = "sccache"\n[target.x86_64-pc-windows-gnu]\nlinker = "x86_64-w64-mingw32-gcc"\n[target.i686-pc-windows-gnu]\nlinker = "i686-w64-mingw32-gcc"\n[target.x86_64-apple-darwin]\nlinker = "/usr/local/osxcross/bin/x86_64-apple-darwin${MACOS_DARWIN_VERSION}-clang"\nar = "/usr/local/osxcross/bin/x86_64-apple-darwin${MACOS_DARWIN_VERSION}-ar"\n[target.aarch64-apple-darwin]\nlinker = "/usr/local/osxcross/bin/aarch64-apple-darwin${MACOS_DARWIN_VERSION}-clang"\nar = "/usr/local/osxcross/bin/aarch64-apple-darwin${MACOS_DARWIN_VERSION}-ar"\n' > /root/.cargo/config.toml
 RUN cat /root/.cargo/config.toml
-RUN echo "Installing Blockstream's electrs..." && \
-	cd /root && \
-	git clone -b submit-tx-package https://github.com/stevenroose/electrs.git --depth 1 && \
-	cd electrs && \
-	git fetch --depth 1 origin ${ELECTRS_HASH} && \
-	cargo install --locked --path .
 RUN echo "pre-build bark" && \
 	cd /root && \
 	wget https://ziglang.org/download/${ZIG_VERSION}/zig-linux-x86_64-${ZIG_VERSION}.tar.xz && \
@@ -107,12 +112,7 @@ RUN echo "pre-build bark" && \
 	ln -s /root/zig-linux-x86_64-${ZIG_VERSION}/zig /usr/bin/ && \
 	cargo install cargo-zigbuild && \
 	export SDKROOT=/usr/local/osxcross/SDK/MacOSX${MACOS_SDK_VERSION}.sdk && \
-	git clone https://codeberg.org/ark-bitcoin/bark.git && \
-	cd bark && \
-	cargo build --workspace && \
-	cargo llvm-cov --workspace --exclude ark-testing --html && \
-	cargo install --locked --path bark && \
-	cargo install --locked --path aspd && \
+	cd /root/bark && \
 	cargo build --release --target x86_64-unknown-linux-gnu         --locked --manifest-path aspd/Cargo.toml && \
 	cargo build --release --target x86_64-unknown-linux-gnu         --locked --manifest-path bark/Cargo.toml && \
 	cargo build --release --target x86_64-pc-windows-gnu            --locked --manifest-path bark/Cargo.toml && \
