--- a/.woodpecker/tests-codecov.yml
+++ b/.woodpecker/tests-codecov.yml
@@ -17,7 +17,7 @@ steps:
   - name: check-commits
     when:
       - evaluate: CI_CODECOV_PIPELINE == "true"
-    image: registry.2nd.dev/build:18
+    image: registry.2nd.dev/build:19
     commands:
       - git log --oneline | head -n 1
       - just check-commits
@@ -27,30 +27,36 @@ steps:
     when:
       - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: check-commits
-    image: registry.2nd.dev/build:18
+    image: registry.2nd.dev/build:19
     environment:
       RUST_TEST_THREADS: 1
     commands:
       - git log --oneline | head -n 1
-      - just test-unit-all-codecov
+      - >
+        nix --extra-experimental-features 'nix-command flakes' develop .#default --command bash -c "
+          cargo llvm-cov --workspace --exclude ark-testing --no-report
+        "
 
   - name: build
     when:
       - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: check-commits
-    image: registry.2nd.dev/build:18
+    image: registry.2nd.dev/build:19
     environment:
       RUST_TEST_THREADS: 1
     commands:
       - git log --oneline | head -n 1
-      - cargo version
-      - just build-codecov
+      - >
+        nix --extra-experimental-features 'nix-command flakes' develop .#default --command bash -c "
+          cargo version &&
+          RUSTFLAGS=\"-C instrument-coverage\" LLVM_PROFILE_FILE=\"your-binary-%p-%m.profraw\" cargo build --workspace
+        "
 
   - name: test-integration-btc29.0
     when:
       - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: build
-    image: registry.2nd.dev/build:18
+    image: registry.2nd.dev/build:19
     volumes:
       - /data:/host/data
     environment:
@@ -64,8 +70,6 @@ steps:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
-      - ls -al $${BITCOIND_EXEC}
-      - ls -al $${LIGHTNINGD_EXEC}
       - service postgresql start
       - bash ./contrib/ci-run-test.sh test-integration-codecov
 
@@ -73,7 +77,7 @@ steps:
     when:
       - evaluate: CI_CODECOV_PIPELINE == "true"
     depends_on: test-integration-btc29.0
-    image: registry.2nd.dev/build:18
+    image: registry.2nd.dev/build:19
     volumes:
       - /data:/host/data
     commands:
