--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ async-trait = "0.1.83"
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.3"
 rand = { version = "0.9.0", features = [ "std", "std_rng" ] }
-bdk_wallet = { version = "2.0.0-beta.0" }
+bdk_wallet = { version = "2.0.0" }
 bdk_esplora = { version = "0.22.0", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
 bdk_bitcoind_rpc = { version = "0.20.0" }
 # tracing and monitoring
