--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -5,6 +5,7 @@ license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
 edition = "2021"
 repository = "https://github.com/ark-bitcoin/bark"
+readme = "README.md"
 
 [features]
 default = ["cli", "tls-native-roots"]
