--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { version = "0.4", features = [ "serde" ] }
 serde_json = { version = "1", features = [ "raw_value" ] }
 toml = "0.8.19"
 ciborium = "0.2.1"
+rmp-serde = "1.3.0"
 config = "0.15.6"
 humantime = "2.1.0"
 # async + gRPC stack
