--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -47,7 +47,7 @@ clap.workspace = true
 futures.workspace = true
 async-trait.workspace = true
 serde_json.workspace = true
-ciborium.workspace = true
+rmp-serde.workspace = true
 config.workspace = true
 toml.workspace = true
 humantime.workspace = true
