--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -1,6 +1,6 @@
 data_dir = "./aspd"
 network = "regtest"
-vtxo_expiry_delta = 4320
+vtxo_lifetime = 4320
 vtxo_exit_delta = 12
 htlc_expiry_delta = 6
 max_arkoor_depth = 5
