--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 
 [features]
 default = ["cli", "tls-native-roots"]
-cli = ["home"]
+cli = ["clap", "fern", "home"]
 tls-native-roots = ["tonic/tls-native-roots"]
 tls-webpki-roots = ["tonic/tls-webpki-roots"]
 
@@ -43,9 +43,7 @@ serde.workspace = true
 rusqlite =  "0.31.0"
 
 lazy_static.workspace = true
-fern.workspace = true
 chrono.workspace = true
-clap.workspace = true
 serde_json.workspace = true
 humantime.workspace = true
 
@@ -59,6 +57,9 @@ tonic.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 
+# CLI only
+clap = { workspace = true, optional = true }
+fern = { workspace = true, optional = true }
 home = { version = "=0.5.9", optional = true }
 
 [dev-dependencies]
