--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ thiserror = { version = "2.0.12" }
 log = { version = "0.4.27", features = [ "kv", "kv_serde" ] }
 serde = { version = "1.0.219" }
 # grpc clients
-tonic = { version = "0.12.2", features = [ "tls", "gzip" ] }
+tonic = { version = "0.13.1", features = [ "tls-webpki-roots", "gzip" ] }
+tonic-build = "0.13.1"
 tower = "0.5.2"
 http = "1.2.0"
 http-body = "1.0.1"
@@ -47,7 +48,6 @@ config = "0.15.6"
 humantime = "2.1.0"
 semver = "1.0.26"
 # async + gRPC stack
-tonic-build = "0.12.2"
 prost = "0.13.2"
 tokio = { version = "1.35", features = [ "rt-multi-thread", "fs", "signal" ] }
 tokio-util = { version = "0.7.14" }
@@ -66,11 +66,11 @@ bdk_wallet = { version = "2.0.0" }
 bdk_esplora = { version = "0.22.0", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
 bdk_bitcoind_rpc = { version = "0.20.0" }
 # tracing and monitoring
-opentelemetry = "0.29.0"
-opentelemetry_sdk = { version = "0.29.0", features = [ "trace", "rt-tokio" ] }
-opentelemetry-otlp = { version = "0.29.0", features = [ "trace", "grpc-tonic" ] }
-opentelemetry-semantic-conventions = { version = "0.29.0", features = [ "semconv_experimental" ] }
+opentelemetry = "0.30.0"
+opentelemetry_sdk = { version = "0.30.0", features = [ "trace", "rt-tokio" ] }
+opentelemetry-otlp = { version = "0.30.0", features = [ "trace", "grpc-tonic", "gzip-tonic" ] }
+opentelemetry-semantic-conventions = { version = "0.30.0", features = [ "semconv_experimental" ] }
 tracing = { version = "0.1.41", features = [ "std", "attributes" ] }
-tracing-opentelemetry = "0.30.0"
+tracing-opentelemetry = "0.31.0"
 tracing-subscriber = { version = "0.3.19", features = [ "std", "registry", "ansi", "fmt", "env-filter" ] }
 
