--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # generated rpc server/client
 server-rpc/src/bark_server.rs
+server-rpc/src/intman.rs
 cln-rpc/src/cln.rs
 cln-rpc/src/plugins/hold.rs
 
