--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0-alpha"
 license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
 edition = "2021"
-repository = "https://github.com/ark-bitcoin/bark"
+repository = "https://codeberg.org/ark-bitcoin/bark"
 readme = "README.md"
 
 [features]
