--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -9,24 +9,25 @@ name = "bitcoin_ext"
 [features]
 default = [ "rpc", "bdk" ]
 rpc = [ "bdk_bitcoind_rpc" ]
-bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait", "thiserror" ]
+bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait"]
 
 [dependencies]
+log.workspace = true
 
 # EXPORTED
 bitcoin = { version = "0.32", features = [ "serde", "rand" ] }
 serde = { version = "1.0.219", features = [ "derive" ] }
 serde_json = "1.0.140"
+thiserror = { workspace = true }
 
 # INTERNAL
 lazy_static.workspace = true
 
 # rpc
-bdk_bitcoind_rpc = { version = "0.20.0", optional = true }
+bdk_bitcoind_rpc = { version = "0.21.0", optional = true }
 
 # bdk
 bdk_wallet = { version = "2.1.0", optional = true }
 bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false, optional = true }
 reqwest = { version = "0.12.18", features = [ "rustls-tls" ], default-features = false, optional = true }
 async-trait = { version = "0.1.88", optional = true }
-thiserror = { workspace = true, optional = true }
