--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ config = "0.15.6"
 humantime = "2.1.0"
 semver = "1.0.26"
 # async + gRPC stack
+parking_lot = "0.12.4"
 prost = "0.13.2"
 tokio = { version = "1.35", features = [ "rt-multi-thread", "fs", "signal" ] }
 tokio-util = { version = "0.7.14" }
