--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -8,7 +8,7 @@ slow_test = []
 
 [dependencies]
 ark-lib = { path = "../ark-lib", features = ["test-util"] }
-bark-aspd = { path = "../aspd" }
+bark-server = { path = "../server" }
 aspd-log = { path = "../aspd-log" }
 aspd-rpc = { path = "../aspd-rpc", features = ["server"] }
 bark-cln-rpc = { path = "../cln-rpc"}
