--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bark-aspd"
+name = "bark-server"
 version = "0.0.0-alpha"
 license = "CC0-1.0"
 authors = ["Steven Roose <steven@roose.io>"]
