--- a/server-log/Cargo.toml
+++ b/server-log/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "aspd-log"
+name = "bark-server-log"
 version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "server_log"
 
 [dependencies]
 # OWN
