--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-aspd-rpc/src/aspd.rs linguist-generated=true
+server-rpc/src/aspd.rs linguist-generated=true
 cln-rpc/src/cln.rs linguist-generated=true
 cln-rpc/src/plugins/hold.rs linguist-generated=true
