--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -14,7 +14,7 @@ server = []
 
 [dependencies]
 # OWN
-ark-lib = { path = "../ark-lib" }
+ark-lib = { path = "../lib" }
 bitcoin.workspace = true
 
 # EXPORTED
