--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 name = "cln_rpc"
 
 [dependencies]
-ark-lib = { path = "../ark-lib" }
+ark-lib = { path = "../lib" }
 bitcoin.workspace = true
 tonic.workspace = true
 prost.workspace = true
