--- a/contrib/docker/docker-compose.yml
+++ b/contrib/docker/docker-compose.yml
@@ -52,11 +52,11 @@ services:
     depends_on:
       bitcoind:
         condition: service_healthy
-  aspd:
+  captaind:
     image:
-      docker.io/secondark/aspd:latest
+      docker.io/secondark/captaind:latest
     volumes:
-      - aspd:/data/aspd
+      - captaind:/data/captaind
       - postgres:/var/lib/postgresql/data
       - cln:/data/cln
     ports:
@@ -72,11 +72,11 @@ services:
     volumes:
       - bark:/root
     depends_on:
-      aspd:
+      captaind:
         condition: service_started
 
 volumes:
-  aspd:
+  captaind:
   bark:
   cln:
   bitcoind:
