--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -27,7 +27,9 @@ required-features = ["cli"]
 
 # OWN
 ark-lib = { path = "../lib" }
-bark-bitcoin-ext = { path = "../bitcoin-ext" }
+bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false, features = [
+    "core_rpc", "esplora_rpc", "bdk",
+]}
 bark-json = { path = "../bark-json" }
 bark-server-rpc = { path = "../server-rpc" }
 
