--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
 miniscript = "12.3"
 rand = { version = "0.9.0", features = [ "std", "std_rng" ] }
 bdk_wallet = { version = "2.1.0" }
+bdk_core = { version = "0.6.1", default-features = false }
 bdk_esplora = { version = "0.22.1", features = [ "std", "async-https-rustls", "tokio" ], default-features = false }
 bdk_bitcoind_rpc = { version = "0.21.0" }
 # tracing and monitoring
