--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -66,7 +66,7 @@ steps:
         nix --extra-experimental-features 'nix-command flakes' develop .#default --command bash -c "
           cargo init barktest &&
           cd barktest &&
-          cargo add bark-client &&
+          cargo add bark-wallet &&
           cargo update && cargo build
         "
 
@@ -76,7 +76,7 @@ steps:
     commands:
       - >
         nix --extra-experimental-features 'nix-command flakes' develop .#default --command bash -c "
-          cargo build -p bark-client      --no-default-features --features=\"\" &&
+          cargo build -p bark-wallet      --no-default-features --features=\"\" &&
           cargo build -p bark-bitcoin-ext --no-default-features --features=\"\" &&
           cargo build -p ark-lib          --no-default-features --features=\"\"
         "
