--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -9,11 +9,9 @@ name = "bitcoin_ext"
 [features]
 default = [ "rpc", "bdk" ]
 rpc = [ "bdk_bitcoind_rpc" ]
-bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait"]
+bdk = [ "bdk_wallet", "bdk_esplora", "reqwest", "async-trait", "log" ]
 
 [dependencies]
-log.workspace = true
-
 # EXPORTED
 bitcoin = { version = "0.32", features = [ "serde", "rand" ] }
 serde = { version = "1.0.219", features = [ "derive" ] }
@@ -22,6 +20,7 @@ thiserror = { workspace = true }
 
 # INTERNAL
 lazy_static.workspace = true
+log = { workspace = true, optional = true }
 
 # rpc
 bdk_bitcoind_rpc = { version = "0.21.0", optional = true }
