--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -7,22 +7,21 @@ edition = "2021"
 name = "bitcoin_ext"
 
 [features]
-default = ["bdk", "rpc", "core_rpc", "esplora_rpc"]
+default = ["bdk", "rpc", "esplora"]
 bdk = ["bdk_wallet", "log"]
-rpc = []
-core_rpc = ["rpc", "bdk_bitcoind_rpc"]
-esplora_rpc = ["rpc", "bdk_esplora", "async-trait", "reqwest"]
+rpc = ["bdk_bitcoind_rpc"]
+esplora = ["rpc", "bdk_esplora", "async-trait", "reqwest"]
 
 [dependencies]
 # EXPORTED
 bitcoin = { version = "0.32", features = [ "serde", "rand" ] }
 serde = { version = "1.0.219", features = [ "derive" ] }
 serde_json = "1.0.140"
-thiserror = { workspace = true }
 
 # INTERNAL
 lazy_static.workspace = true
 log = { workspace = true, optional = true }
+thiserror = { workspace = true }
 
 # rpc
 bdk_bitcoind_rpc = { version = "0.21.0", optional = true }
