server: Fix issue with root certificates when connecting to CLN
- This happened in the faucet

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -58,7 +58,7 @@ bdk_bitcoind_rpc.workspace = true
 
 lightning.workspace = true
 
-tonic = { workspace = true, features = ["tls-native-roots"] }
+tonic = { workspace = true, features = ["tls-ring"] }
 tower.workspace = true
 http.workspace = true
 http-body.workspace = true
